syntax = "proto3";

option go_package = "/pb/user;pb_user";

message NewUser {
  string name = 1;
  string email = 2;
  string password = 3;
}

message User {
  string userId = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message Filter {
  string name = 1;
}

message Users {
  repeated User users = 1;
}

service UserService {
  rpc Create (NewUser) returns (User) {}
  rpc Read (Filter) returns (Users) {}
}

// command to create pb:
// protoc --go_out=. --go-grpc_out=. proto/user.proto